--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prototxt-parser",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "a prototxt parser for js based on parsimmon",
   "main": "dist/node/index.js",
   "types": "dist/node/index.d.ts",
@@ -28,12 +28,8 @@
     "browserify": "~14.4.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-if": "^2.0.2",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.1",
     "gulp-typescript": "^3.2.3",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
     "jasmine-core": "~2.6.4",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -43,13 +39,11 @@
     "karma-typescript": "^3.0.8",
     "parsimmon": "^1.6.2",
     "run-sequence": "^2.2.0",
+    "tinyify": "^2.3.0",
     "tsify": "~3.0.1",
     "tslint": "~5.6.0",
     "tslint-no-circular-imports": "~0.2.0",
     "typescript": "2.5.3",
-    "uglify-js": "~3.0.28",
-    "uglifyify": "^4.0.5",
-    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
